<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/rel_mian" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:background="@android:color/white"
  	xmlns:android="http://schemas.android.com/apk/res/android">
  	
    <!-- LCD TEST begin -->
    <LinearLayout 
        android:orientation="horizontal" 
        android:id="@+id/showlcdbackground" 
        android:visibility="invisible"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">
        <ImageView 
            android:layout_width="1.0dip" 
            android:layout_height="fill_parent" 
            android:background="@color/red"
            android:radius="4.0dip"
            android:padding="7dip"
            android:angle="270.0" 
            android:layout_weight="1.0" />
        <ImageView android:layout_width="1.0dip" 
            android:layout_height="fill_parent" 
			android:background="@color/green"
			android:radius="4.0dip"     
			android:padding="7dip"      
			android:angle="270.0"  
            android:layout_weight="1.0" />
        <ImageView android:layout_width="1.0dip" 
            android:layout_height="fill_parent" 
			android:background="@color/blue"
			android:radius="4.0dip"
			android:padding="7dip"
			android:angle="270.0" 
            android:layout_weight="1.0" />
    </LinearLayout>
    <!-- LCD TEST end -->
    
    <!-- Camera view Test begin -->
    <SurfaceView 
        android:id="@+id/surface" 
        android:visibility="invisible" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" />
    <!-- Camera view Test end -->
    
    <!-- Video Test begin -->
    <com.mlt.factoryautotest.view.CustomVideoView
        android:id="@+id/videoView"
        android:visibility="invisible"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />
    <!-- Video Test end -->
    
 	<!-- APP Title begin -->
    <TextView 
        android:textSize="28.0dip" 
        android:gravity="center" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="15.0dip" 
        android:textColor="@android:color/black"
        android:text="@string/str_factorytest" 
        android:textStyle="bold"/>
    <!-- APP Title end -->
    
    <!-- Seting edit begin -->
    <LinearLayout 
        android:gravity="center" 
        android:orientation="vertical" 
        android:id="@+id/ll_controlbar" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="60.0dip">
        <LinearLayout 
            android:gravity="center" 
            android:orientation="horizontal" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content">
            <TextView android:textSize="25.0dip" 
                android:textColor="@android:color/black" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/str_testtimes" />
            
            <!-- 编辑输入框，输入循环次数 -->
            <EditText 
                android:textSize="22.0dip" 
                android:id="@+id/edit_testtimes" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/str_defaulttimes" 
                android:inputType="number" />
        </LinearLayout>
        <!-- 1.Start button -->
        <Button 
            android:textSize="28.0dip" 
            android:textColor="@android:color/black" 
            android:id="@+id/but_start" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:background="@drawable/selector_button"
            android:text="@string/str_start" />
    </LinearLayout>
    <!-- Seting edit end -->
    
    <!-- ALL Test List  -->
    <LinearLayout 
        android:gravity="center" 
        android:orientation="vertical" 
        android:id="@+id/ll_test" 
        android:visibility="invisible" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="60.0dip">
        <!-- ALL Test Times begin -->
        <LinearLayout 
            android:gravity="center" 
            android:orientation="horizontal" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content">
            <TextView 
                android:textSize="22.0dip" 
                android:textColor="@android:color/black" 
                android:layout_gravity="left" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/str_alltesttimes" />
            <TextView 
                android:textSize="23.0dip" 
                android:textColor="@android:color/black" 
                android:id="@+id/txt_alltimes" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" />
        </LinearLayout>
         <!-- ALL Test Times end -->
         
        <!-- Current Test Times begin -->
        <LinearLayout 
            android:gravity="center" 
            android:orientation="horizontal" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content">
            <TextView android:textSize="22.0dip" 
                android:textStyle="bold" 
                android:textColor="@android:color/black" 
                android:layout_gravity="left" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/str_curtesttimes" />
            <TextView 
                android:textSize="23.0dip" 
                android:textStyle="bold" 
                android:textColor="@android:color/black" 
                android:id="@+id/txt_curtimes" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" />
        </LinearLayout>
        <!-- Current Test Times end -->
        
        <!-- 测试列表 begin -->
        <LinearLayout 
            android:gravity="center" 
            android:orientation="vertical" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginTop="10.0dip">
            <!-- 测试1 -->
            <com.mlt.factoryautotest.view.AutoScaleTextView
                android:id="@+id/txt_test1" 
                android:layout_width="@dimen/width"
				android:layout_height="@dimen/height"
				android:layout_gravity="center_horizontal"
				android:layout_margin="5dp"
                android:textSize="24.0dip" 
                android:textColor="@android:color/black" />
            <!-- 测试2 -->
            <com.mlt.factoryautotest.view.AutoScaleTextView
                android:id="@+id/txt_test2" 
                android:layout_width="@dimen/width"
				android:layout_height="@dimen/height"
				android:layout_gravity="center_horizontal"
				android:layout_margin="5dp"
                android:textSize="24.0dip" 
                android:textColor="@android:color/black" />
            <!-- 测试3 -->
            <com.mlt.factoryautotest.view.AutoScaleTextView
                android:id="@+id/txt_test3" 
                android:layout_width="@dimen/width"
				android:layout_height="@dimen/height"
				android:layout_gravity="center_horizontal"
				android:layout_margin="5dp"
                android:textSize="24.0dip" 
                android:textColor="@android:color/black" />
            <!-- 测试4 -->
            <com.mlt.factoryautotest.view.AutoScaleTextView
                 android:id="@+id/txt_test4" 
                android:layout_width="@dimen/width"
				android:layout_height="@dimen/height"
				android:layout_gravity="center_horizontal"
				android:layout_margin="5dp"
                android:textSize="24.0dip" 
                android:textColor="@android:color/black" />
            <!-- 测试5 -->
            <com.mlt.factoryautotest.view.AutoScaleTextView
                 android:id="@+id/txt_test5" 
                android:layout_width="@dimen/width"
				android:layout_height="@dimen/height"
				android:layout_gravity="center_horizontal"
				android:layout_margin="5dp"
                android:textSize="24.0dip" 
                android:textColor="@android:color/black" />
            <!-- 测试6 -->
            <com.mlt.factoryautotest.view.AutoScaleTextView
                 android:id="@+id/txt_test6" 
                android:layout_width="@dimen/width"
				android:layout_height="@dimen/height"
				android:layout_gravity="center_horizontal"
				android:layout_margin="5dp"
                android:textSize="24.0dip" 
                android:textColor="@android:color/black" />
            <!-- 测试7 -->
            <com.mlt.factoryautotest.view.AutoScaleTextView
                 android:id="@+id/txt_test7" 
                android:layout_width="@dimen/width"
				android:layout_height="@dimen/height"
				android:layout_gravity="center_horizontal"
				android:layout_margin="5dp"
                android:textSize="24.0dip" 
                android:textColor="@android:color/black" />
            <!-- 测试8 -->
            <com.mlt.factoryautotest.view.AutoScaleTextView 
                 android:id="@+id/txt_test8" 
                android:layout_width="@dimen/width"
				android:layout_height="@dimen/height"
				android:layout_gravity="center_horizontal"
				android:layout_margin="5dp"
                android:textSize="24.0dip" 
                android:textColor="@android:color/black" />
            <!-- 测试9 -->
        <!--  <com.mlt.factoryautotest.view.AutoScaleTextView
                android:id="@+id/txt_test9" 
                android:layout_width="@dimen/width"
				android:layout_height="@dimen/height"
				android:layout_gravity="center_horizontal"
				android:layout_margin="5dp"
                android:textSize="24.0dip" 
                android:textColor="@android:color/black" /> -->
        </LinearLayout>
         <!-- 测试列表 end -->
    </LinearLayout>
    
    <!-- 测试报告时间 item -->
    <RelativeLayout  
        android:id="@+id/reportlist_item"
	    android:orientation="horizontal" 
	    android:visibility="invisible"
	    android:layout_marginLeft="10.0dip" 
        android:layout_marginTop="50.0dip" 
	    android:layout_width="fill_parent"
	    android:layout_height="30dip" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/test_Num"
	        android:textStyle="bold" />
	    <TextView 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_gravity="center"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="10dip"
	        android:text="@string/test_result"
	        android:textStyle="bold" />    
	</RelativeLayout>
	
    <!-- 测试报告结果  begin-->
    <ListView 
        android:id="@+id/report_listview" 
        android:visibility="invisible" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="10.0dip" 
        android:layout_marginTop="75.0dip"
        android:layout_marginBottom="82dip" />
    <!-- 测试报告结果 end-->
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
	    <!-- Stop Button begin -->
        <Button 
	        android:id="@+id/but_stop" 
	        android:visibility="visible"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:background="@drawable/selector_button" 
	        android:text="@string/exit" 
	        android:textSize="20dip"
	        android:textColor="@android:color/black"/>
        <!-- Stop Button end -->
        
    	<!-- View Report Button begin  -->
    	<Button 
	        android:id="@+id/but_report" 
	        android:visibility="gone"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:layout_marginLeft="10dp"
	        android:text="@string/str_report" 
	        android:textSize="20dip"
	        android:background="@drawable/selector_button"
	        android:textColor="@android:color/black"/>
    	<!-- View Report Button end  -->
    </LinearLayout>
</RelativeLayout>